# product-ordering-rust-go-grpc

notification/: Makefile  go.mod  go.sum  main.go
notification/proto/: order.pb.go  order_grpc.pb.go
order/: Cargo.toml  Makefile  build.rs
order/order/: mod.rs  order.rs
order/proto/: order.proto
order/src/: main.rs
product/: Cargo.toml
product/src/: database.rs  main.rs  models.rs
