[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio", "time", "uuid"] }
time = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
uuid = { version = "1.4.1", features = ["serde", "v7"] }

[build-dependencies]
tonic-build = "0.10.2"
